# smode_laser_plugin

./: CMakeLists.txt  README.md
.github/workflows/: smode_laser_plugin.yml
copy_lib_to_smode/: Cargo.toml
copy_lib_to_smode/src/: main.rs
copy_plugin_to_smode/: Cargo.toml
copy_plugin_to_smode/src/: main.rs
plugin/: .gitignore  Build Visual Studio 14 2015.bat  Build Visual Studio 15 2017.bat  Build Visual Studio 16 2019.bat  CMakeLists.txt  Laser.h  LaserDevice.h  LaserDeviceFactory.h  LaserDeviceIdentifier.h  LaserDeviceSelector.h  LaserGeometryRenderer.h  LaserGeometryShader.sglsl  LaserInputGeometry.h  LaserInputGeometryShader.sglsl  LaserLibrary.cpp  LaserLibrary.h  LaserLibrary.xml  LaserPoint.sglsl  LinesLaserGeometryShader.sglsl  NannouLaserDevice.h  NannouLaserDeviceFactory.h  NannouLaserDeviceIdentifier.h  PointsLaserGeometryShader.sglsl
smode_laser/: Cargo.toml  README.md  cbindgen.toml  smode_laser.h
smode_laser/src/: lib.rs
smode_laser_plugin/: Cargo.toml  README.md  cbindgen.toml  smode_laser_plugin.h
smode_laser_plugin/src/: lib.rs
