#\-------------------------------------- . -----------------------------------/#
# Filename : CMakeList.txt               | Smode Plugin path traversal         #
# Author   : Alexandre Buge              |                                     #
# Started  : 11/05/2020 14:36            |                                     #
#/-------------------------------------- . -----------------------------------\#

ADD_SUBDIRECTORY(plugin)

