[package]
name = "smode_laser_plugin"
version = "0.1.0"
authors = [
    "mitchmindtree <mitchell.nordine@gmail.com>",
    "JoshuaBatty <joshpbatty@gmail.com>",
]
description = "A small library extending `nannou_laser` for SMODE"
keywords = ["laser", "dac", "stream", "frame", "smode"]
repository = "https://github.com/mindbuffer/smode_laser_plugin.git"
homepage = "https://github.com/mindbuffer/smode_laser_plugin"
edition = "2018"

[lib]
name = "smode_laser_plugin"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
nannou_laser = { git = "https://github.com/nannou-org/nannou", branch = "master", features = ["ffi"] }
